# discord-voice-bot

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  CODE_REVIEW_REPORT.md  DEPLOYMENT.md  DEVELOPMENT.md  LICENSE  README.md  architecture_analysis.md  check_current_settings.py  debug_user_voice.py  discord_voice_bot_spec.json  main.py  migrate_settings.py  plan.md  prompt.md  pyproject.toml  spec.md  test_bot_creation.py  test_bot_permissions.py  test_bot_startup.py  test_dynamic_settings.py  test_engine_mapping.py  test_health_monitor.py  test_message_pipeline.py  test_slash_commands.py  test_speaker_mapping.py  test_tts_engines.py  test_voicevox_amai.py  verify_voice_settings.py
.claude/agents/: README.md  audio_processing_specialist.md  configuration_specialist.md  discord_bot_specialist.md  monitoring_specialist.md  testing_specialist.md  tts_engine_specialist.md
.roo/: mcp.json
.roo/rules/: rules.md
.serena/: project.yml
.serena/cache/python/: document_symbols_cache_v23-06-25.pkl
.serena/memories/: coding_style_and_conventions.md  project_overview.md  suggested_commands.md  task_completion_workflow.md
scripts/: check-max-lines.sh  gh-review-threads.sh  trigger_direct_tts.py  trigger_tts_test.py
src/: bot.py  config.py  health_monitor.py  message_processor.py  speaker_mapping.py  tts_engine.py  user_settings.py  voice_handler.py
src/discord_voice_bot/: __init__.py  __main__.py  audio_debugger.py  audio_processor.py  bot.py  bot.py.backup  bot_factory.py  command_handler.py  config.py  config_manager.py  content_filter.py  event_connection_handler.py  event_handler.py  event_message_handler.py  event_startup_manager.py  health_monitor.py  message_processor.py  message_validator.py  permission_manager.py  protocols.py  slash_command_handler.py  speaker_mapping.py  status_manager.py  temp_file_manager.py  test_modular_architecture.py  tts_client.py  tts_engine.py  tts_health_monitor.py  user_settings.py  voice_handler.py
src/discord_voice_bot/slash/: __init__.py  registry.py
src/discord_voice_bot/slash/autocomplete/: voice.py
src/discord_voice_bot/slash/embeds/: status.py  voices.py
src/discord_voice_bot/slash/handlers/: __init__.py  clear.py  reconnect.py  skip.py  status.py  test_tts.py  voice.py  voicecheck.py  voices.py
src/discord_voice_bot/voice/: __init__.py  audio_utils.py  connection_manager.py  gateway.py  handler.py  health.py  health_monitor.py  queue_manager.py  queues.py  rate_limiter_manager.py  ratelimit.py  stats_tracker.py  status.py  task_manager.py
src/discord_voice_bot/voice/workers/: player.py  synthesizer.py
test_discord_api/: .env.example  README.md  run_test.sh  test_message_content.py  test_voice_channel_speaking.py
tests/: base_test.py  conftest.py  send_test_script.py  simple_self_message_test.py  test_bot_permissions.py  test_config.py  test_discord_api_message_content.py  test_health_monitor.py  test_integration_voice_speaking.py  test_integration_voice_speaking_functions.py  test_message_processing.py  test_message_processor.py  test_message_validator.py  test_performance_memory.py  test_self_message_fix.py  test_self_message_reading.py  test_status_manager.py  test_token_validation.py  test_tts_engine.py  test_voice_handler.py  test_voice_handler_cleanup.py  test_voice_handler_compliance.py  test_voice_handler_fixtures.py  test_voice_handler_initialization.py  test_voice_handler_models.py  test_voice_handler_queue.py  test_voice_handler_status.py  test_voice_integration_bot.py  test_workers.py
tests/debug/: comprehensive_voice_debug.py  quick_audio_test.py  quick_speaking_test.py
tests/integration/: basic_discord_test.py  direct_audio_test.py  final_end_to_end_test.py  final_production_test.py  force_audio_test.py  minimal_api_test.py  test_bot_command.py  test_bot_direct.py  test_commands.py  test_discord_pitch_fix.py  test_discord_playback.py  test_discord_voice_fix.py  test_edge_cases.py  test_fixed_voices.py  test_messages.py  test_parallel_synthesis.py  test_pitch_fix_final.py  test_pitch_solutions.py  test_user_voices.py  test_voice_connection.py  test_voice_fix.py
